# cardiomedai

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  Dockerfile-toolbox  README.md  docker-compose.yml  entrypoint.sh  hypertension.db  migrate_db.py  migrate_to_azure_sql.py  pyproject.toml  retest_agent.py  substitute.sh  switch-mode.ps1  test_db_connection.py  toolbox-entrypoint.sh
app/: bp_reminder_service.py  database.py  enhanced_models.py  enhanced_schemas.py  main.py  medication_ocr.py  models.py  ocr.py  schemas.py
app/advisor_agent/: datetime_tool.py  health_advisor_service.py  knowledge_agent_service.py  tools.yaml
app/advisor_agent/knowledge_base/: hypertension_guide.md
app/routers/: blood_pressure.py  health_advisor.py  knowledge_agent.py  reminders.py  users.py
deployment/: Dockerfile.production  README.md  azure-deployment.md  deploy.sh
frontend/: add-reading.css  add-reading.html  add-reading.js  chat.css  chat.html  chat.js  config.js  debug.html  history.css  history.html  history.js  index.html  profile.css  profile.html  profile.js  script.js  styles.css
